fix no column gap

--- a/src/ui/pages/TalentsPage/TalentsPage.module.css
+++ b/src/ui/pages/TalentsPage/TalentsPage.module.css
@@ -26,6 +26,7 @@
 .nonWrapableControls {
     display: flex;
     flex-wrap: nowrap;
+    column-gap: 12px;
 }
 
 .talentLists {
